--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logo.png" />
-    <title>Any Atelier</title>
+    <title>Any atelier</title>
 
     <!-- links -->
     <link rel="stylesheet" href="css/reset.css">
