--- a/index.html
+++ b/index.html
@@ -46,6 +46,34 @@
         </nav>
     </header>
 
+    <section>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100 imagem-carrossel" src="img/carousel-first.jpg" alt="Primeiro Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 imagem-carrossel" src="img/carousel-second.jpg" alt="Segundo Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 imagem-carrossel" src="img/carousel-third.jpg" alt="Terceiro Slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Próximo</span>
+          </a>
+        </div>
+      </section>
 
     <footer class="rodape">
         <img src="img/logotipo.png" alt="Logo any noivas" class="rodape__logo">
