corrigindo bugs e criando o arquivo css com o estilo do carousel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/rodape.css">
 
 
@@ -47,7 +48,7 @@
     </header>
 
     <section>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
