criei sobre nós, criei imagem pessoal da veranice

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/apresentacao.css">
     <link rel="stylesheet" href="css/rodape.css">
 
 
@@ -45,6 +46,36 @@
           </div>
         </nav>
     </header>
+
+    <section>
+      <div class="apresentacao container">
+          <div class="apresentacao__descricao">
+              <h2 class="apresentacao__titulo">Sobre a Any noivas</h2>
+          <p class="apresentacao__texto">A Any noivas é uma empresa especial porque reconhece a importância dos momentos especiais de suas clientes, a paixão começou quando criança olhando minha mãe costurar. Pra mim era um momento mágico, são boas lembranças que guardo comigo. 
+            Desde então a minha missão é proporcionar o mesmo sentimento para quem está em momento tão especial. </p>
+          </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="apresentacao container">
+          <div class="apresentacao__descricao">
+              <h2 class="apresentacao__titulo">A fundadora</h2>
+          <p class="apresentacao__texto">A fundadora da empresa tem muita experiencia com modelagem e costura. Com muita paixão no que faz, com 4 anos de estudos em modelagem e muita experiencia na costura. </p>
+          </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="apresentacao container">
+          <div class="apresentacao__descricao">
+          <p class="apresentacao__texto apresentacao__titulo">“O brilho nos olhos das minhas clientes vale muito mais do que o retorno financeiro que tenho delas.”</p>
+          </div>
+          <img src="img/veranice.png" alt="">
+      </div>
+    </section>
+
+
 
     <footer class="rodape">
         <img src="img/logotipo.png" alt="Logo any noivas" class="rodape__logo">
